# FastMicroService

./: .gitignore  Makefile  README.md  pyproject.toml  shell.py
common/: context.py  decorators.py  encrypt.py  enums.py  exceptions.py  fastapi.py  log.py  loguru.py  monkey_patch.py  pydantic.py  regex.py  responses.py  schemas.py  types.py  utils.py
common/constant/: messages.py  validate.py
common/oss/: file.py
common/tortoise/: __init__.py  function.py  functions.py  validators.py
common/tortoise/contrib/pydantic/: creator.py  types.py
common/tortoise/fields/: base.py
common/tortoise/models/: base.py
conf/: config.py  defines.py
etc/: template.json  template.yaml
services/: crud.py  dependencies.py  exceptions.py  middlewares.py
services/entrypoint/: factory.py  main.py
services/userCenter/: factory.py
services/userCenter/core/: factory.py  middlewares.py
services/userCenter/entrypoint/: factory.py  main.py  rpc.py
services/userCenter/routers/account/: views.py
services/userCenter/routers/v1/: __init__.py
services/userCenter/routers/v1/account/: views.py
services/userCenter/v1/: __init__.py
services/userCenter/v1/account/: schema.py  views.py
services/user_center/: factory.py
services/user_center/v1/: __init__.py
services/user_center/v1/account/: schema.py  views.py
storages/clickhouse/: connection.py
storages/hbase/models/: base.py
storages/oss/: file.py  impl.py
storages/redis/: util.py
storages/relational/migrate/: env.py
storages/relational/migrate/asset_center/: 0_20240621111351_init.py
storages/relational/migrate/user_center/: 0_20240614110934_init.py  1_20240614152756_update.py
storages/relational/models/: __init__.py  account.py  vehicle.py
storages/relational/schema/: account.py
tests/: conftest.py
tests/factory/: account.py  base.py
